@@ -10,14 +10,13 @@
  *******************************************************************************/
 package org.eclipse.e4.xwt.ui.views;
 
-import java.io.File;
-import java.io.FileWriter;
+import java.io.ByteArrayInputStream;
+import java.net.URL;
 
 import org.eclipse.core.resources.IFile;
 import org.eclipse.e4.xwt.ILoadingContext;
 import org.eclipse.e4.xwt.XWT;
 import org.eclipse.e4.xwt.ui.XWTUIPlugin;
-import org.eclipse.e4.xwt.ui.utils.ProjectContext;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.layout.GridLayout;
@@ -30,7 +29,6 @@ public class XWTView extends ViewPart {
 	public static final String ID = "org.eclipse.e4.xwt.ui.views.XWTView";
 
 	protected Composite container;
-	private ProjectContext projectContext;
 
 	/**
 	 * The constructor.
@@ -50,18 +48,14 @@ public class XWTView extends ViewPart {
 	}
 
 	public void setContent(String code, IFile file) {
-		setContent(code, new ProjectContentProvider(file));
-	}
-
-	public void setContent(String code, IContentProvider contentProvider) {
 		try {
-			setContentWithException(code, contentProvider);
+			setContentWithException(code, file, new ProjectContentProvider(file));
 		} catch (Exception e) {
-			throw new RuntimeException(e);
+			e.printStackTrace();
 		}
 	}
 
-	public void setContentWithException(String code, IContentProvider contentProvider) throws Exception {
+	public void setContentWithException(String code, IFile file, IContentProvider contentProvider) throws Exception {
 		XWTUIPlugin.checkStartup();
 		for (Control child : container.getChildren()) {
 			child.dispose();
@@ -71,24 +65,13 @@ public class XWTView extends ViewPart {
 			XWT.setLoadingContext(loadingContext);
 		}
 		if (code != null) {
-			File file = new File("c:/text.xwt");
-			try {
-				FileWriter fileWriter = new FileWriter(file);
-				fileWriter.write(code);
-				fileWriter.close();
-			} catch (Exception e) {
-				throw new RuntimeException(e);
-			}
-
-			XWT.load(container, file.toURI().toURL());
-		} else {
-			XWT.load(container, contentProvider.getContentURL());
+			XWT.load(container, new ByteArrayInputStream(code.getBytes()), new URL(file.getLocation().toString()), null);
 		}
 		container.layout(true, true);
 	}
 
 	public void setContentWithException(String code, IFile file) throws Exception {
-		setContentWithException(code, new ProjectContentProvider(file));
+		setContentWithException(code, file, new ProjectContentProvider(file));
 	}
 
 	/**
